--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "eggPlugin": {
     "name": "auth"
   },
-  "dependencies": {},
+  "dependencies": {
+    "sonorpc": "0.0.5"
+  },
   "devDependencies": {
     "autod": "^3.0.1",
     "autod-egg": "^1.1.0",
